force-app/main/default/objects/Order/fields/Account_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Party_Id__c</fullName>
    <formula>Account.Party_Id__c</formula>
    <label>Account Party Id</label>
    <type>Text</type>
</CustomField>