force-app/main/default/objects/Order/fields/Activated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date_Time__c</fullName>
    <formula>ActivatedDate</formula>
    <label>Activated Date/Time</label>
    <type>DateTime</type>
</CustomField>