force-app/main/default/objects/Order/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag, will be used to check if Return and Credit orders are approved before sent to Oracle.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>