force-app/main/default/objects/Order/fields/Benefit_Auth_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Auth_Start_Date__c</fullName>
    <formula>Opportunity.Benefit_Auth_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Auth Start Date</label>
    <type>Date</type>
</CustomField>