force-app/main/default/objects/Order/fields/CA_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>CA_Due_Amount__c</fullName>
    <formula>Total_Gross_Price__c - CC_Auth_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>