force-app/main/default/objects/Order/fields/CA_GST_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>CA_GST_Tax_Amount__c</fullName>
    <label>CA GST Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>