force-app/main/default/objects/Order/fields/CA_HST_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>CA_HST_Tax_Amount__c</fullName>
    <label>CA HST Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>