force-app/main/default/objects/Order/fields/CA_HST_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>CA_HST_Tax_Rate__c</fullName>
    <label>CA HST Tax Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>