force-app/main/default/objects/Order/fields/Calculated_G6_Starter_Kit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Calculated_G6_Starter_Kit_Date_Time__c</fullName>
    <description>This field takes the starter kit date tied to the account, if it exist, else it will display the Invoice date.</description>
    <formula>IF(NOT(ISBLANK( Account.G6_Starter_Kit_Ship_Date__c )), Account.G6_Starter_Kit_Ship_Date__c,  IF(AND(ISPICKVAL(Status, &apos;Closed&apos;), Count_Of_Starter_Kit__c &gt; 0), DATETIMEVALUE(Invoice_Date__c), null))</formula>
    <label>Calculated G6 Starter Kit Date Time</label>
    <type>DateTime</type>
</CustomField>