force-app/main/default/objects/Order/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>IF( 
	NOT(ISBLANK(Display_RGA_Number__c)), Display_RGA_Number__c,
	IF( 
		CONTAINS(TEXT(Type), &apos;DE TECH&apos;) &amp;&amp; NOT(ISBLANK(Case__c )), Case__r.CaseNumber,
	IF(
		NOT(ISBLANK(PoNumber)), PoNumber, &apos;&apos;
		)
	)		
)</formula>
    <label>Case/RGA Number</label>
    <type>Text</type>
</CustomField>