force-app/main/default/objects/Order/fields/CC_Auth_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Auth_Amount__c</fullName>
    <label>CC Auth Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>