force-app/main/default/objects/Order/fields/CC_Last_4__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_4__c</fullName>
    <description>Displays the last 4 of the Credit Card</description>
    <formula>If((Text(Payment_Terms__c) == &apos;net0&apos;  &amp;&amp; NOT(ISBLANK( Finance_Detail__c ))),  Finance_Detail__r.Last_4_Digits__c, &apos;&apos;)</formula>
    <label>CC Last 4</label>
    <type>Text</type>
</CustomField>