force-app/main/default/objects/Order/fields/CC_Trans_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Trans_Status__c</fullName>
    <description>Transaction status as sent by Cybersource</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Transaction status as sent by Cybersource</inlineHelpText>
    <label>CC Trans Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>