force-app/main/default/objects/Order/fields/Co_Pay__c.field-meta.xml
<CustomField>
    <fullName>Co_Pay__c</fullName>
    <label>Co-Pay</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>