force-app/main/default/objects/Order/fields/Corrected_Payor__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For credit rebill process</description>
    <label>Corrected Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Corrected Payor)</relationshipLabel>
    <relationshipName>OrdersCreditRebill</relationshipName>
    <type>Lookup</type>
</CustomField>