force-app/main/default/objects/Order/fields/Corrected_Payor_Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Payor_Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for credit rebill process-</description>
    <label>Corrected Payor Bill To Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders (Corrected Payor Bill To Address)</relationshipLabel>
    <relationshipName>OrdersCreditRebillAddress</relationshipName>
    <type>Lookup</type>
</CustomField>