force-app/main/default/objects/Order/fields/Count_Of_Admin_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Admin_Products__c</fullName>
    <description>Counts the number of Products added by Admin</description>
    <label>Count Of Admin Products</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Added_By_Admin__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>