force-app/main/default/objects/Order/fields/Count_Of_Discount_SKU__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Discount_SKU__c</fullName>
    <description>This field stores the quantity of DEX-MKT-DISC in Order Product</description>
    <label>Count Of Discount SKU</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>DEX-MKT-DISC</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>