force-app/main/default/objects/Order/fields/Count_of_G6_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_G6_Instructions__c</fullName>
    <description>Tracks the count of MT26148</description>
    <label>Count of G6 Instructions</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>MT26148</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>