force-app/main/default/objects/Order/fields/Count_Of_G6_Receivers__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_G6_Receivers__c</fullName>
    <description>Rollup field will cover the G6 Receivers included in the Order</description>
    <label>Count Of G6 Receivers</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>STK-GS-013, STK-GS-109</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>