force-app/main/default/objects/Order/fields/Count_Of_G6_Transmitters__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_G6_Transmitters__c</fullName>
    <description>Rollup field will cover the G6 Transmitters included in the Order</description>
    <label>Count Of G6 Transmitters</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>STT-GS-003, STT-GS-006</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>