force-app/main/default/objects/Order/fields/Count_of_IFU_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_IFU_Line_Items__c</fullName>
    <label>Count of IFU Line Items</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>startsWith</operation>
        <value>MT</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>