force-app/main/default/objects/Order/fields/Count_of_Open_Retraction_Cases__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Retraction_Cases__c</fullName>
    <description>Rollup based on Retraction Cases tied to an Order.</description>
    <label>Count of Open Retraction Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>