force-app/main/default/objects/Order/fields/Count_of_Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Order_Line_Items__c</fullName>
    <label>Count of Order Line Items</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>