force-app/main/default/objects/Order/fields/Count_of_Shipped_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Shipped_Line_Items__c</fullName>
    <description>Based on the Order Item&apos;s Status, decide whether a Order Line Item is shipped.</description>
    <label>Count of Shipped Line Items</label>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>equals</operation>
        <value>AWAIT BILLING, CANCELED, CLOSED, SHIPPED, Awaiting Billing, BILLED, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>