force-app/main/default/objects/Order/fields/Count_Of_Shipping_SKU__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Shipping_SKU__c</fullName>
    <description>Rollup field will cover the Shipping SKU attached to the Order</description>
    <label>Count Of Shipping SKU</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>FREIGHT CHARGE, DEX-SHIP-01</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>