force-app/main/default/objects/Order/fields/Count_Of_Starter_Kit__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Starter_Kit__c</fullName>
    <description>Stores the number of starter kit SKU tied to the Order</description>
    <label>Count Of Starter Kit</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>CASTARTERKITG6, GBSTARTERKITG6</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>