force-app/main/default/objects/Order/fields/Count_of_Virtual_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Virtual_SKUs__c</fullName>
    <description>Records the count of Virtual SKUs tied to the Order.</description>
    <label>Count of Virtual SKUs</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>contains</operation>
        <value>RNT, PPD</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>