force-app/main/default/objects/Order/fields/Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Current_User__c</fullName>
    <description>This formula evaluates to true if record owner is current logged in user.
This field is used in report for filtering records by current user.</description>
    <formula>IF(CreatedById = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>