force-app/main/default/objects/Order/fields/Credit_Card_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Authorization_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card Authorization Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>