force-app/main/default/objects/Order/fields/Customer_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Ship To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders (Ship To Address)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>