force-app/main/default/objects/Order/fields/DE_Customer_Letter_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>DE_Customer_Letter_SKU_Count__c</fullName>
    <description>Jagan 04/21/2019 - Created this field to count the MT26095 SKU added for (JIRA#CRMSF-4023)</description>
    <label>DE Customer Letter SKU Count</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>MT26095</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>