force-app/main/default/objects/Order/fields/DE_G6_Xmer_Instr_Sheet_Count__c.field-meta.xml
<CustomField>
    <fullName>DE_G6_Xmer_Instr_Sheet_Count__c</fullName>
    <description>Jagan 07/16/2019 - Created this field to count the MT26120 SKU added for (JIRA#CRMSF-4368). This field can be deactivated or not used after 9/15/2019. Need to confirm with Business before we perform this step.</description>
    <label>DE G6 Xmer Instr Sheet Count</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>MT26120</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>