force-app/main/default/objects/Order/fields/Delivery_Note_Printed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jagan 12/10/2017 - Added this checkbox to track if Delivery note printed is tracked on Order</description>
    <label>Delivery Note Printed</label>
    <type>Checkbox</type>
</CustomField>