force-app/main/default/objects/Order/fields/Delivery_Note_Received__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jagan 12/10/2017 - Added this field to track if Delivery note was received on Order.</description>
    <label>Delivery Note Received</label>
    <type>Checkbox</type>
</CustomField>