force-app/main/default/objects/Order/fields/Delivery_Note_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Reminder__c</fullName>
    <description>This field is used to store delivery Note Reminder Stage.</description>
    <label>Delivery Note Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reminder 1</fullName>
            </value>
            <value>
                <fullName>Reminder 2</fullName>
            </value>
            <value>
                <fullName>Reminder 3</fullName>
            </value>
            <value>
                <fullName>Delivery Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>