force-app/main/default/objects/Order/fields/Delivery_Reminder_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Reminder_Change_Date__c</fullName>
    <description>This field is updated by a workflow whenever value in &quot;Delivery Note Reminder&quot; field value is changed. Separate field is created for reporting rather than audit tracking field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Reminder Change Date</label>
    <type>Date</type>
</CustomField>