force-app/main/default/objects/Order/fields/Display_RGA_Number__c.field-meta.xml
<CustomField>
    <fullName>Display_RGA_Number__c</fullName>
    <formula>IF( 
	AND(CONTAINS(TEXT(Type), &apos;RET&apos;), NOT(CONTAINS(TEXT(Type), &apos;TECH&apos;))),
	RGA_Number__c, &apos;&apos;
)</formula>
    <label>RGA Number</label>
    <type>Text</type>
</CustomField>