force-app/main/default/objects/Order/fields/Dist_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dist_Invoice_Amount__c</fullName>
    <description>Sum of Order Line Total Price + Final Shipping Charge</description>
    <formula>Non_Cancelled_Order_Line_Amt__c +  Final_Shipping_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dist Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>