force-app/main/default/objects/Order/fields/DZH_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>DZH_Send_Date__c</fullName>
    <description>This is scheduled date to submit invoices to DZH</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DZH Send Date</label>
    <type>Date</type>
</CustomField>