force-app/main/default/objects/Order/fields/Ecom_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Confirmation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Order Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>