force-app/main/default/objects/Order/fields/Ecom_Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Parent_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ecom Parent Order</label>
    <length>40</length>
    <type>Text</type>
</CustomField>