force-app/main/default/objects/Order/fields/Email_Stage__c.field-meta.xml
<CustomField>
    <fullName>Email_Stage__c</fullName>
    <description>Number 1: When the email is sent for Open Status.
Number 2: When the email is sent after 28 days and checkbox is still unchecked.</description>
    <label>Email Stage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>