force-app/main/default/objects/Order/fields/Final_Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Final_Shipping_Charge__c</fullName>
    <description>For Distributor Orders, shipping charges are known after shipping and not at the time of Order Creation. This field captures the Final Shipping Charges.</description>
    <label>Final Shipping Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>