force-app/main/default/objects/Order/fields/Finance_Detail__c.field-meta.xml
<CustomField>
    <fullName>Finance_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Detail</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Finance_Detail__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Finance_Detail__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Payor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Finance_Detail__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>