force-app/main/default/objects/Order/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund, which will be associated to the Order</description>
    <label>Fund</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR (3 AND 4) OR (5 AND 4)) AND 2</booleanFilter>
        <filterItems>
            <field>$Source.Payor__c</field>
            <operation>equals</operation>
            <valueField>Fund__c.Payor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Fund__c.Is_Fund_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Fund__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Clinical Studies Fund</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Fund__c.Payor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Fund__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Distributor Fund</value>
        </filterItems>
        <infoMessage>Fund is not active.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>