force-app/main/default/objects/Order/fields/Future_Order__c.field-meta.xml
<CustomField>
    <fullName>Future_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notation to easily identify future orders that can be processed through a batch.</description>
    <label>Future Order</label>
    <type>Checkbox</type>
</CustomField>