force-app/main/default/objects/Order/fields/G4_G5_Sensor_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>G4_G5_Sensor_SKU_Count__c</fullName>
    <description>Jagan 04/21/2019 - This field will check if the Order has a G4/G5 Sensor SKU in it.</description>
    <label>G4/G5 Sensor SKU Count</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>startsWith</operation>
        <value>STS-GF</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>