force-app/main/default/objects/Order/fields/G6_Instructions_Shipped__c.field-meta.xml
<CustomField>
    <fullName>G6_Instructions_Shipped__c</fullName>
    <description>Field checks if G6 IFUs were shipped out to the customer.</description>
    <formula>IF(Account.G6_Instructions_Shipped__c, TRUE, (IF(Count_of_G6_Instructions__c &gt; 0, TRUE, FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G6 Instructions Shipped</label>
    <type>Checkbox</type>
</CustomField>