force-app/main/default/objects/Order/fields/Generate_QR_Bill__c.field-meta.xml
<CustomField>
    <fullName>Generate_QR_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to request to generate QR Bill for an order</description>
    <label>Generate QR Bill</label>
    <type>Checkbox</type>
</CustomField>