force-app/main/default/objects/Order/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <description>Email used to track for Invoice purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>