force-app/main/default/objects/Order/fields/Invoice_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Status__c</fullName>
    <label>Invoice Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>