force-app/main/default/objects/Order/fields/Invoice_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Gross_Price__c</fullName>
    <description>Calculates gross price to be displayed in the invoice.</description>
    <formula>Invoice_Net_Price__c +  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>