force-app/main/default/objects/Order/fields/Invoice_Insurant_Copay__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Insurant_Copay__c</fullName>
    <description>This field calculates the Net copay amount</description>
    <formula>-(Copay_Product_Quantity__c * 1.19)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Insurant Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>