force-app/main/default/objects/Order/fields/Invoice_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net_Price__c</fullName>
    <description>Calculates net price to be displayed in the invoice. This will the sum of all Medical Advice Numbered products plus the copay.</description>
    <formula>Medical_Advice_Number_Products_Total_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>