force-app/main/default/objects/Order/fields/Invoice_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NS-1189 All Markets- Invoice Rejection/Invoice Rejection Reasons on Order Level</description>
    <label>Invoice Rejection</label>
    <type>Checkbox</type>
</CustomField>