force-app/main/default/objects/Order/fields/Invoice_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rejection_Reasons__c</fullName>
    <description>NS-1189 All Markets- Invoice Rejection/Invoice Rejection Reasons on Order Level</description>
    <label>Invoice Rejection Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid PO Number</fullName>
            </value>
            <value>
                <fullName>Incorrect Entity Billed</fullName>
            </value>
            <value>
                <fullName>Incorrect VAT Treatment</fullName>
            </value>
            <value>
                <fullName>Incorrect Patient ID/NHS number</fullName>
            </value>
            <value>
                <fullName>PO Overspend</fullName>
            </value>
            <value>
                <fullName>Goods Not Received</fullName>
            </value>
            <value>
                <fullName>Order items do not match PO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>