force-app/main/default/objects/Order/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Open</fullName>
            </value>
            <value>
                <fullName>Invoice Requested</fullName>
            </value>
            <value>
                <fullName>Invoice Created</fullName>
            </value>
            <value>
                <fullName>Invoice Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>